[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/art/shop/shop_background.png" type="Texture" id=1]
[ext_resource path="res://assets/art/shop/shop_slot2.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/독립기념관체.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/GUI/Shop.gd" type="Script" id=5]
[ext_resource path="res://assets/art/inventory/inventory_slot.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 128, 128 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 4 )

[node name="Shop" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="shop_background" type="Sprite" parent="."]
position = Vector2( 942.231, 493.084 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="Exit" type="Button" parent="shop_background"]
margin_left = 348.802
margin_top = -495.872
margin_right = 495.802
margin_bottom = -450.872
custom_fonts/font = SubResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyScrollContainer" type="ScrollContainer" parent="shop_background"]
margin_left = -495.0
margin_top = -239.0
margin_right = -17.0
margin_bottom = 496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="shop_background/BuyScrollContainer"]
margin_right = 448.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="shop_background/BuyScrollContainer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 160.0
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="shop_background/BuyScrollContainer/VBoxContainer/TextureRect"]
margin_left = 15.0
margin_top = 15.0
margin_right = 145.0
margin_bottom = 145.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="shop_background/BuyScrollContainer/VBoxContainer/TextureRect/Panel"]
margin_top = -1.48315
margin_right = 512.0
margin_bottom = 510.517
rect_scale = Vector2( 0.25, 0.25 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="shop_background/BuyScrollContainer/VBoxContainer/TextureRect"]
margin_left = 160.0
margin_top = 18.0
margin_right = 430.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "파란 포션"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="Label" parent="shop_background/BuyScrollContainer/VBoxContainer/TextureRect"]
margin_left = 160.0
margin_top = 96.0
margin_right = 305.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30 Coin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="shop_background/BuyScrollContainer/VBoxContainer/TextureRect"]
margin_left = 335.0
margin_top = 97.0
margin_right = 431.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 4 )
text = "구매"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellScrollContainer" type="ScrollContainer" parent="shop_background"]
margin_left = 17.1083
margin_top = -240.305
margin_right = 495.108
margin_bottom = 494.695
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="shop_background/SellScrollContainer"]
margin_right = 448.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="shop_background/SellScrollContainer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 160.0
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="shop_background/SellScrollContainer/VBoxContainer/TextureRect"]
margin_left = 15.0
margin_top = 15.0
margin_right = 145.0
margin_bottom = 145.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="shop_background/SellScrollContainer/VBoxContainer/TextureRect/Panel"]
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 0.25, 0.25 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="shop_background/SellScrollContainer/VBoxContainer/TextureRect"]
margin_left = 160.0
margin_top = 18.0
margin_right = 430.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "파란 포션"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="shop_background/SellScrollContainer/VBoxContainer/TextureRect"]
margin_left = 160.0
margin_top = 96.0
margin_right = 365.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Numberof" type="Label" parent="shop_background/SellScrollContainer/VBoxContainer/TextureRect/HBoxContainer"]
margin_top = 2.0
margin_right = 62.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "(99)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="Label" parent="shop_background/SellScrollContainer/VBoxContainer/TextureRect/HBoxContainer"]
margin_left = 66.0
margin_top = 2.0
margin_right = 183.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "30 Coin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sell" type="Button" parent="shop_background/SellScrollContainer/VBoxContainer/TextureRect"]
margin_left = 368.0
margin_top = 97.0
margin_right = 432.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 4 )
text = "판매"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Consumption" type="Button" parent="shop_background"]
margin_left = 90.0
margin_top = -300.0
margin_right = 165.0
margin_bottom = -257.0
custom_fonts/font = SubResource( 7 )
text = "소비"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipment" type="Button" parent="shop_background"]
margin_left = 15.0
margin_top = -300.0
margin_right = 90.0
margin_bottom = -257.0
custom_fonts/font = SubResource( 7 )
text = "장비"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Etc" type="Button" parent="shop_background"]
margin_left = 165.0
margin_top = -300.0
margin_right = 240.0
margin_bottom = -257.0
custom_fonts/font = SubResource( 7 )
text = "기타"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinContainer" type="HBoxContainer" parent="shop_background"]
margin_left = 301.358
margin_top = -299.004
margin_right = 411.358
margin_bottom = -259.004
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinValue" type="Label" parent="shop_background/CoinContainer"]
margin_right = 47.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "120"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinName" type="Label" parent="shop_background/CoinContainer"]
margin_left = 51.0
margin_right = 110.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Coin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NpcImage" type="TextureRect" parent="shop_background"]
margin_left = -495.0
margin_top = -495.0
margin_right = -270.0
margin_bottom = -255.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerImage" type="TextureRect" parent="shop_background"]
margin_left = -240.599
margin_top = -495.99
margin_right = -15.5988
margin_bottom = -255.99
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDetailContainer" type="Control" parent="shop_background"]
visible = false
margin_left = -337.097
margin_top = -78.9831
margin_right = 271.903
margin_bottom = 161.017
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="shop_background/ItemDetailContainer"]
anchor_left = 0.169
anchor_right = 0.169
margin_left = -0.0169373
margin_top = -1.84186
margin_right = 509.983
margin_bottom = 238.158
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="shop_background/ItemDetailContainer/Panel"]
margin_left = 33.6739
margin_top = 32.4267
margin_right = 73.6739
margin_bottom = 46.4267
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "아이템 이름 : "

[node name="ItemName" type="Label" parent="shop_background/ItemDetailContainer/Panel"]
margin_left = 173.0
margin_top = 34.0
margin_right = 453.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true

[node name="Description" type="Label" parent="shop_background/ItemDetailContainer/Panel"]
margin_left = 38.3826
margin_top = 74.8052
margin_right = 166.383
margin_bottom = 104.805
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "아이템 설명 : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="Label" parent="shop_background/ItemDetailContainer/Panel"]
margin_left = 180.0
margin_top = 75.0
margin_right = 436.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effect" type="Label" parent="shop_background/ItemDetailContainer/Panel"]
margin_left = 36.7972
margin_top = 150.018
margin_right = 189.797
margin_bottom = 180.018
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "아이템 효과 : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemEffect" type="Label" parent="shop_background/ItemDetailContainer/Panel"]
margin_left = 184.155
margin_top = 148.841
margin_right = 337.155
margin_bottom = 178.841
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="shop_background/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="shop_background/Consumption" to="." method="_on_change_inven_type" binds= [ "consumption" ]]
[connection signal="pressed" from="shop_background/Equipment" to="." method="_on_change_inven_type" binds= [ "equipment" ]]
[connection signal="pressed" from="shop_background/Etc" to="." method="_on_change_inven_type" binds= [ "etc" ]]
